updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a random guy taking a software dev course.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Ogden, Ut</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy playing with synthesizers</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Anything at a stable company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Ogden, Ut</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I had six months free, and it seemed like a good use of time & money</p>
     </section>
 
     <footer id="footer">
